kubernetes/apps/app-cluster/productivity/termix/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: termix-internal
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Internal SSH and server access (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "http://termix.krapulax.home"
    gethomepage.dev/icon: "terminal.png"
    gethomepage.dev/name: "Termix (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - termix.krapulax.home
  rules:
    - backendRefs:
        - name: termix
          namespace: productivity
          port: 80
